<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/parent_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!-- Bounds Container -->
    <LinearLayout
        android:id="@+id/bounds_control_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:textAlignment="gravity"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.40"
            android:orientation="horizontal"
            android:gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_from"/>

            <Button
                android:id="@+id/btn_from_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="DatePickerDialog"
                android:text="@string/empty_date"/>
        </LinearLayout>

        <android.widget.Space
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.15"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.40"
            android:orientation="horizontal"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_to"/>

            <Button
                android:id="@+id/btn_to_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="DatePickerDialog"
                android:text="@string/empty_date"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Controls Container -->
    <LinearLayout
        android:id="@+id/data_control_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_new_val"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="AddValDialog"
            android:text="@string/btn_new_val"/>

        <Button
            android:id="@+id/btn_load_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="LoadNextDataSet"
            android:text="@string/btn_next_dataset"/>

    </LinearLayout>

    <!-- Graph Container -->
    <LinearLayout
        android:id="@+id/graph_container"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/data_control_layout"
        android:layout_below="@id/bounds_control_layout"
        android:orientation="horizontal"/>
</RelativeLayout>